--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	font-family: Merriweather, "Open Sans", "Times New Roman", "Sans Serif";
 	color: rgba(0, 0, 0, 0.9);
 	-webkit-tap-highlight-color: #fff;
-}
+	}
 
 .one{
 	margin-top: 20%;
@@ -68,7 +68,7 @@ body{
 	border-radius: 15px;
 	box-shadow: 3px 3px rgba(0,0,0,0.1);
 	position: relative;
-	top: -200px;
+	top: -230px;
 	background: #fff;
 }
 
@@ -238,12 +238,31 @@ footer{
 	margin: auto 0% auto 7%;
 	width: 12%;
 }
+.ddaw:hover{
+	text-decoration: none;
+}
+.ddaw:active{
+	text-decoration: none;
+}
+
+.calculator{
+	margin-top: 15%;
+	padding-top: 0;
+	border-bottom: solid 1px rgba(0,0,0,0.2);
+}
+
+.calculatorName, .calculatorName:hover{
+	margin-bottom: 20%;
+	margin-left: 42%;
+}
 
 
 
-/* ---700px---*/
 
-@media screen and (min-width: 700px){
+
+/* ---600px---*/
+
+@media screen and (min-width: 600px){
 	.ddaw{
 		margin-left: 7%;
 	}
@@ -357,7 +376,7 @@ footer{
 	}
 
 	.work{
-		padding-top: 15%;
+		padding-top: 7%;
 		margin-bottom: 0%;
 		padding-bottom: 0%;
 		text-align: center;
@@ -382,20 +401,34 @@ footer{
 		padding-bottom: 5%;
 	}
 
-	.falbum{
+	.falbum, .falbum:hover{
 		display: block;
 		margin-bottom: 10%;
 		margin-top: 0%;
-		margin-left: 43%;
+		margin-left: 32.5%;
 		color: #000;
 	}
 
-	.falbum:hover{
-		text-decoration: none;
-		display: block;
-		margin-bottom: 10%;
-		margin-top: 0%;
-		margin-left: 43%;
+	.myWork{
+		display: inline-block;
+		width: 45%;
+		margin-left: 0 auto;
+	}
+	.family{
+		margin-left: 6%;
+	}
+
+	.calculator{
+		margin-left: 15%;
+	}
+
+	.calculatorName, .calculatorName:hover{
+		margin-bottom: 20%;
+		margin-left: 27.5%;
+	}
+
+	.fontaw1{
+		margin-left: 10%;
 	}
 }
 
@@ -540,14 +573,14 @@ footer{
 		display: block;
 		margin-bottom: 10%;
 		margin-top: 0%;
-		margin-left: 47%;
+		margin-left: 40%;
 	}
 
 	.falbum:hover{
 		display: block;
 		margin-bottom: 10%;
 		margin-top: 0%;
-		margin-left: 47%;
+		margin-left: 45%;
 	}
 
 	.para3{
@@ -568,6 +601,10 @@ footer{
 		margin-bottom: 2%;
 	}
 
+	.fontaw1{
+		margin-left: 10%;
+	}
+
 	.awe{
 		margin-bottom: 3%;
 		margin-top: 0%;
@@ -584,5 +621,10 @@ footer{
 
 	.album{
 		margin-left: 30%;
+	}
+
+	.calculatorName, .calculatorName:hover{
+		margin-bottom: 20%;
+		margin-left: 42%;
 	}
 }
